mais alguns ajustes
design responsivo na pagina contatos

--- a/Site_Terror_Sobrenatural/SITE-TERROR-SOBRENATURAL/css/contato.css
+++ b/Site_Terror_Sobrenatural/SITE-TERROR-SOBRENATURAL/css/contato.css
@@ -21,8 +21,8 @@
     }
 
     form{
+        width: auto;
         height: auto;
-        width: 500px;
         margin: auto;
         text-align: center;
     }
