--- a/Site_Terror_Sobrenatural/SITE-TERROR-SOBRENATURAL/css/style.css
+++ b/Site_Terror_Sobrenatural/SITE-TERROR-SOBRENATURAL/css/style.css
@@ -26,7 +26,7 @@
 }
 
 html, body{
-	height: 100%
+	height: 100% 
 } 
 
 body{
@@ -40,10 +40,16 @@ body{
 }
 
 section{
-    box-shadow: 5px 5px 10px white;
+    box-shadow: 5px 5px 1px white;
+    padding: 10px 20px;
 
 } 
 
+section p{
+    font-size: 20px;
+    color: white;
+
+}
 
 .menu li{
     margin-right: 10px;
@@ -95,6 +101,7 @@ section{
 }
 
 .interface h3{
+    box-shadow: 5px 5px 10px white;
     margin-top: 30px;
     font-style: italic;
     font-family: 'Lobster',sans-serif;
