--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1,5 +1,7 @@
+@media sreen and (max-width: 1250px){
 
-@media screen and (max-width: 910px){
+}
+@media screen and (max-width: 980px){
   
     #home{
         justify-content: center;
