--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,13 @@ header#home .logo{
 
 header#home .logo h1{
     font-family: "fontNightmare",sans-serif;
-	font-size: 55px;
+	font-size: 100px;
 	color: white;
 	text-shadow: 1px 10px 20px red;
 	letter-spacing: 5px;
 	text-align: center;
     font-style: italic;
+    padding: 10px 0;
    
 }
 
@@ -124,7 +125,7 @@ button i{
 .menu li a{
     font-family: 'fontNightmare',sans-serif;
     text-decoration: none;
-    font-size: 40px;
+    font-size: 50px;
     color: white;
     text-shadow: 5px 5px 20px red;
     font-style: italic;
@@ -170,7 +171,7 @@ button i{
 }
 
 .mobile li{
-    font-size: 25px;    
+    font-size: 26px;    
     border-top: 2px solid red;
     padding: 10px 0;
     color: white;
@@ -187,125 +188,45 @@ button i{
     width: 100%;
     height: 90vh;
     margin: 0 auto;
-    background-image: url('../imagens/terror-1.jpg');
+    background-image: url('../imagens/pexels-rahul-695644.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center;
+    background-position: bottom;
     box-shadow: 1px 100px 200px white;
+    position: relative;
+    
     
 }
 
-main{
-   background: linear-gradient(to bottom, white 1%,grey 3%, black 10%) ;
-   box-shadow: 10px 1px 400px white;
-   width: 100%;
-   height: auto;
-   padding: 0px 30px;
-}
-
-aside{
-    border-left: 2px solid red;
-}
-article{
-    display: flex;
-    flex-direction: column;
-    
-}
-
-section{ 
-    align-items: flex-start;
-    display: flex;
-    height: auto;
-    padding: 10px 20px;
-} 
-
-.artigo1, aside{
-    height: auto;
-    padding: 0 5%; 
-    white-space: normal;
-    text-align: justify;
-    word-break: normal; 
-}
-
-.artigo1 h3, aside h3{
-    margin: 30px;
-    font-style: italic;
-    font-weight: bolder;
-    font-family: 'open',sans-serif;
-    font-size: 25px;
-    color: white;
-    text-shadow: 1px 10px 10px red;
-
-} 
-
-.artigo1 p, aside p{
-    display: inline;
-    font-size: 20px;
-    color: white;
-    text-shadow: 1px 6px 10px white;
-
-}
-
-aside img{
-    height: 300px;
-    box-shadow: 10px 10px 10px 10px white;
-    border: 2px solid white;
-}
-
-
-/* footer todas as paginas */
-
-  footer.rodape{   
-    width: 100%;
-    height: 100px;
-    border-top: 2px solid rgb(255, 51, 51);
-    text-align: center; 
-    padding: 0px 100px;
-    padding-top: 20px; 
-}
-    
-    .item{
-    display: inline-block;
-    margin-right: -4px;
-    width: 25%;
-        
-    }
-
-    .boxrodape div:last-of-type{
-    transition: 2s;
-}
-
-    .boxrodape div:last-of-type:hover{
-    width: 22%;
-    background-image: url('../imagens/terrorsobrenatural.jpg');
+.fantasma-1{
+    opacity: 0;
+    position: absolute;
+    top: 25%;
+    left: 20%;
+    width: 30%;
+    height: 500px;
+    background-image: url('../imagens/horror.png');
+    background-size: 100% 100%;
+    /* background-position: center; */
     background-repeat: no-repeat;
-    background-size: contain;
-    position: relative;  
+    animation: ghosttransition 20s infinite;
 }
 
-    .item img{
-        width: 18%;
-       
+@keyframes ghosttransition{
+    15%{
+        opacity: 0.1;
     }
 
-    .item a{
-        text-decoration: none;
-        font-family: 'fontNightmare',sans-serif;
-        font-size: 45px;
-        color: white;
-        text-shadow: 5px 5px 10px red;
-        cursor: pointer;
-        
+    35%{
+        opacity: 1;
     }
 
-    footer.rodape a:hover{
-    	transition: color 1s;
-        color: red;
-        text-shadow: 5px 5px 10px red;
-        
+    75%{
+        opacity: 5;
     }
 
-
- 
-
+    100%{
+        opacity: 10;
+    }
+}
