--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ button i{
 
 /* container apresentação */
 .container-titulo{
+    z-index: 999;
     width: 100%;
     height: 90vh;
     margin: 0 auto;
@@ -200,6 +201,7 @@ button i{
 }
 
 .fantasma-1{
+    z-index: 1;
     opacity: 0;
     position: absolute;
     top: 25%;
@@ -213,20 +215,57 @@ button i{
     animation: ghosttransition 20s infinite;
 }
 
+.fantasma-2{
+    z-index: 1;
+    opacity: 0;
+    position: absolute;
+    top: 40%;
+    left: 60%;
+    width: 30%;
+    height: 500px;
+    background-image: url('../imagens/horror2.png');
+    background-size: 100% 100%;
+    /* background-position: center; */
+    background-repeat: no-repeat;
+    animation: ghosttransition2 50s infinite;
+}
+
 @keyframes ghosttransition{
-    15%{
+    0%{
         opacity: 0.1;
+        left: 0%;
+        top: 0%;
     }
 
-    35%{
+    50%{
         opacity: 1;
+        top: 40%;
     }
 
-    75%{
-        opacity: 5;
-    }
 
     100%{
-        opacity: 10;
+        opacity: 0.1;
+        left: 35%;
+        top: 40%;
+    }
+}
+
+@keyframes ghosttransition2{
+     0%{
+        opacity: 0.1;
+        left: 70%;
+        top: 0%;
+    }
+
+    50%{
+        opacity: 1;
+        left: 10%;
+    }
+
+
+    100%{
+        opacity: 0.1;
+        left: 35%;
+        top: 40%;
     }
 }
