--- a/css/style.css
+++ b/css/style.css
@@ -269,3 +269,9 @@ button i{
         top: 40%;
     }
 }
+
+.container-apresentation{
+    width: 100%;
+    height: 400px;
+    background-color: rgb(20, 20, 20);
+}
