--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ header#home .logo{
 
 header#home .logo h1{
     font-family: "fontNightmare",sans-serif;
-	font-size: 100px;
+	font-size: 80px;
 	color: white;
 	text-shadow: 1px 10px 20px red;
 	letter-spacing: 5px;
@@ -229,6 +229,8 @@ button i{
     animation: ghosttransition2 50s infinite;
 }
 
+/*animação container*/
+
 @keyframes ghosttransition{
     0%{
         opacity: 0.1;
@@ -269,8 +271,14 @@ button i{
     }
 }
 
+/*conatiner apresentação*/
+
 .container-apresentation{
     width: 100%;
     height: 400px;
     background-color: rgb(20, 20, 20);
+}
+
+.container-apresentation h2{
+    color: white;
 }
