--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ html, body{
     background-color: black;
 } 
 
-/* menu */
+/* MENU */
 
 #home{
     width: 100%;
@@ -50,7 +50,7 @@ html, body{
     padding: 2% 2%;
 }
 
-/* menu logo */
+/* MENU LOGO */
 
 header#home .logo{
     width: 350px;
@@ -77,9 +77,10 @@ header#home .logo a{
 header#home .logo h3{
     font-family: "fontNight",sans-serif;
 	font-size: 20px;
+    color: ;
 	text-align: center;
     letter-spacing: 1px;
-    text-shadow: 1px 10px 20px red;
+    text-shadow: 10px 10px 20px white;
 }
 
 button {
@@ -112,7 +113,7 @@ button i{
 }    
 
 
-/* menu desktop */
+/* MENU DESKTOP */
 
 .menu ul li{
     display: inline-block;
@@ -138,7 +139,7 @@ button i{
     text-shadow: 2px 2px 10px red;
 }
 
-/* menu mobile */
+/* MENU MOBILE */
 
 .icon-menu{
     font-size: 50px;
@@ -183,21 +184,34 @@ button i{
 }
 
 
-/* container apresentação */
+/* CONTAINER APRESENTAÇÃO */
+.video{
+    position: fixed;
+    margin: 0 auto;
+    bottom: 0;
+    left: 0;
+    min-width: 80%;
+    min-height: 100%;
+    z-index: -1;
+
+}
+
+video{
+    width: 100%;
+    height: 300px;
+}
+
 .container-titulo{
+    position: relative;
     z-index: 999;
     width: 100%;
-    height: 90vh;
+    height: 600px;
     margin: 0 auto;
     /* background-image: url('../imagens/candelabro.gif'); */
-    background-image: linear-gradient(rgba(20, 20, 20, 0.5),rgba(20, 20, 20, 0.5)100%), url('../imagens/candelabro.gif');
-
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: bottom;
-    position: relative;
-    
+    /* background-image: linear-gradient(rgba(20, 20, 20, 0.5),rgba(20, 20, 20, 0.5)100%), url('../imagens/candelabro.gif'); */
+    /* background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat; */
     
 }
 /* 
