--- a/css/style.css
+++ b/css/style.css
@@ -147,39 +147,47 @@ button i{
     cursor: pointer; 
     float: right;
     display: none;
+    transition-duration: 0.3s;
+    -webkit-transition-duration: 0.3s; 
+    -moz-transition-duration: 0.3s;
    
 }
 
-.hide{transition:1s;height:0;}
+.menu-mobile {transform: translateX(-270px);}
+.icon-menu {transform: translateX(0);}
 
-.show{
-    transition:1s;
-    height: auto;
-}
-
-.mobile{
-    z-index: 999;
+.menu-mobile{
+    display: none;
+    right: 0;
+    width:270px;
+    height:100%;
+    position: fixed;
     overflow: hidden;
-    width: 100%;
-    position: absolute;
-    top: 110px;
-    left: 0;
+    /* overflox-y: auto; */
+    transition-duration: 0.3s;
+    -webkit-transition-duration: 0.3s; 
+    -moz-transition-duration: 0.3s;
     text-align: center;
     background-color: rgba(66, 66, 66, 0.7);
     color: white;
-    list-style-type: none;
+    list-style-type: none; 
+    
 }
 
-.mobile li{
+.menu-mobile ul li{
+    display: block;
     font-size: 26px;    
-    border-top: 2px solid red;
     padding: 10px 0;
     color: white;
     text-shadow: 1px 2px black;
 }
 
-.mobile a{
+.menu-mobile a{
     text-decoration: none; 
+}
+
+.menu-mobile li:hover{
+    text-shadow: 5px 5px 5px white;
 }
 
 
