mais responsivo menu mobile

--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -22,8 +22,7 @@
         display: none;
     }
     
-    .icon-menu{
-        padding-right: 20px;
+    .btn-menu{
         display: block;
 
     }
